feat(i18n): add ES/EN translations for entire application
Implement i18next with ES (default) and EN support across all modules:
- Authentication, Dashboard, Learning Reports
- Roadmaps (explore, editor, detail)
- Learning Goals (planner, objectives, tasks)
- Active Listening (sessions, game play, results)
- Add language selector with localStorage persistence
- Update form validations to use i18n

--- a/soft-skills-front/src/i18n/locales/en/common.json
+++ b/soft-skills-front/src/i18n/locales/en/common.json
@@ -22,7 +22,9 @@
     "view": "View",
     "loading": "Loading...",
     "explore": "Explore",
-    "signOut": "Sign out"
+    "signOut": "Sign out",
+    "confirmDeletion": "Confirm Deletion",
+    "confirmDeleteMessage": "Are you sure you want to delete this item? This action cannot be undone."
   },
   "errors": {
     "generic": "An error occurred",
