--- a/soft-skills-front/src/i18n/locales/en/roadmap.json
+++ b/soft-skills-front/src/i18n/locales/en/roadmap.json
@@ -169,6 +169,10 @@
     "range": {
       "to": "to"
     }
+  },
+  "taskInformation": {
+    "visitResources": "Visit the following resources to learn more:",
+    "noResources": "No resources available"
   }
 }
 
