Implement SSE for roadmap events and chatbot conversation end detection
- Add SSE (Server-Sent Events) hook to listen for roadmap creation events
  from backend at /events endpoint with automatic reconnection
- Implement conversation end detection in chatbot store when Aithena sends
  roadmap creation confirmation message
- Display warning alert at the end of chat messages when conversation ends,
  prompting user to start a new conversation
- Add translations for chatbot UI (assistant label, end chat, typing,
  input placeholder, conversation ended messages)
- Refactor code with early returns and helper functions for better readability
- Add SSE types (AbortControllerRef, TimeoutRef) to types directory
- Integrate SSE hook in App.tsx to initialize connection on mount

--- a/soft-skills-front/src/i18n/locales/en/roadmap.json
+++ b/soft-skills-front/src/i18n/locales/en/roadmap.json
@@ -173,6 +173,17 @@
   "taskInformation": {
     "visitResources": "Visit the following resources to learn more:",
     "noResources": "No resources available"
+  },
+  "chatbot": {
+    "assistant": "Your learning roadmap assistant",
+    "endChat": "End chat",
+    "typing": "Typing…",
+    "inputPlaceholder": "Type your message...",
+    "initialMessage": "I can help you create a learning roadmap for various subjects like programming languages, web development, data science, and more. Send me a message to get started!",
+    "conversationEnded": {
+      "message": "The conversation has ended. Start a new conversation to continue.",
+      "newConversation": "New conversation"
+    }
   }
 }
 
